# orc

./: .gitignore  ABOUT.md  README.md  approximate-matching.ipynb  candidate-generation.ipynb  char-sim.ipynb  ocr.ipynb  playground.ipynb  pyproject.toml  wikipedia.ipynb
notebooks/: approximate-matching.ipynb  char-sim.ipynb  ocr.ipynb
orc/: __init__.py  candidates.py  char_sim.py  char_sims.json  edit.py  near_match.py  ocr.py  test_edit.py
